# Multi-Agent-System

./: .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MIGRATION.md  PROTECTION_TEST.md  README.md  SECURITY.md  VERSIONING.md  docker-compose.yml  install.sh  pyproject.toml  system-packages.txt
.github/: CODEOWNERS  QUICK_START_GITHUB.md  RELEASE_2.0.0_CHECKLIST.md  TEAM_ASSIGNMENTS.md  setup-labels.sh  setup-milestones.sh
.github/ISSUE_TEMPLATE/: phase-task.yml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  PERFORMANCE_BASELINE_1.0.0.md  architecture-decisions.md  e2e-scenarios.md  llm-roadmap.md  multi-agent-system-reference.md  performance-tuning.md  production-readiness.md  roadmap.md  v1.0.0-architecture-decisions.md
src/mas/: __init__.py  __main__.py  cli.py
src/mas/adapters/: __init__.py  calendar_adapter.py  contracts.py  document_adapter.py  email_adapter.py  input_dispatcher.py  transcript_adapter.py
src/mas/agents/: __init__.py  evaluator.py  planner.py  self_healer.py  tool_selector.py
src/mas/agents/evaluation/: __init__.py  contracts.py  heuristics.py  rules_engine.py
src/mas/agents/recovery/: __init__.py  escalation.py  failures.py  retry_policy.py
src/mas/domain/: __init__.py  annotation.py  evaluation.py  plan.py  task.py
src/mas/guardrails/: __init__.py  config.py  engine.py  violations.py
src/mas/llm/: __init__.py  base.py  config.py  contracts.py  error_classifier.py  errors.py  provider_registry.py  streaming.py  token_counter.py
src/mas/llm/providers/: __init__.py  anthropic.py  huggingface.py  ollama.py  openai.py
src/mas/llm/validation/: __init__.py  model_validator.py
src/mas/memory/: __init__.py  contracts.py  episodic_store.py  memory_agent.py  working_memory.py
src/mas/observability/: __init__.py  correlation.py  logging_config.py  metrics.py
src/mas/runtime/: __init__.py  executor.py  orchestrator.py
src/mas/tools/: __init__.py  contract.py  registry.py
src/mas/workflow/: __init__.py  policy.py  state.py
tests/: e2e_scenario_builders.py  e2e_scenarios_data.py  test_adapters.py  test_cli.py  test_domain_annotation.py  test_domain_evaluation.py  test_domain_plan.py  test_domain_task.py  test_e2e_scenarios.py  test_episodic_memory.py  test_episodic_store.py  test_error_classifier.py  test_evaluation_contracts.py  test_evaluator.py  test_failures.py  test_guardrails_config.py  test_guardrails_engine.py  test_heuristics.py  test_input_contracts.py  test_input_dispatcher.py  test_llm_async.py  test_llm_base.py  test_llm_config.py  test_llm_contracts.py  test_llm_errors.py  test_llm_integration.py  test_llm_observability.py  test_llm_providers_anthropic.py  test_llm_providers_huggingface.py  test_llm_providers_ollama.py  test_llm_providers_openai.py  test_llm_registry.py  test_memory_agent.py  test_memory_contracts.py  test_model_validator.py  test_observability_correlation.py  test_observability_metrics.py  test_planner.py  test_policy_engine.py  test_retry_policy.py  (+11 more)
tests/integration/: test_provider_integration.py
tests/providers/: test_provider_integration.py
