[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas"
version = "1.0.0"
description = "Multi-Agent System: Generic autonomous agent orchestration framework"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WildcatKSS" }]
keywords = ["multi-agent", "mas", "mvp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "fakeredis>=2.0"]
redis = ["redis>=5.0"]

[project.scripts]
mas = "mas.cli:main"

[project.urls]
Homepage = "https://github.com/WildcatKSS/Multi-Agent-System"
Issues = "https://github.com/WildcatKSS/Multi-Agent-System/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
