[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas"
version = "2.0.0"
description = "Multi-Agent System: Fully agentic autonomous agent orchestration powered by LLMs"
readme = "README.md"
license = {text = "Multi-Agent System Community License v2.0.0"}
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WildcatKSS" }]
keywords = ["multi-agent", "mas", "mvp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "fakeredis>=2.0"]
redis = ["redis>=5.0"]

[project.scripts]
mas = "mas.cli:main"

[project.urls]
Homepage = "https://github.com/WildcatKSS/Multi-Agent-System"
Issues = "https://github.com/WildcatKSS/Multi-Agent-System/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
